--- a/Yagami/MainWindow.xaml
+++ b/Yagami/MainWindow.xaml
@@ -5,10 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Yagami"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-		<Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="157,111,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-		<TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="157,136,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        Title="MainWindow" Height="350" Width="1263">
+	<Grid>
+		<Button x:Name="button" Content="Apply" HorizontalAlignment="Right" Margin="0,0,0,98" VerticalAlignment="Bottom" Width="75" Click="Button_Click" RenderTransformOrigin="3.533,-0.4"/>
+		<Grid Name="DynamicGrid" ShowGridLines="True" Margin="0,244,0,0" VerticalAlignment="Bottom" Height="20">
 
+		</Grid>
 	</Grid>
+
 </Window>
